microservices/infrastructure/k8s/ingress/ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-domain-local-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-web-service
            port:
              number: 80
  - host: api.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: public-gateway-service
            port:
              number: 80
